# eval-corpus

./: .gitignore  README.md  pyproject.toml
.cursor/: rules
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-corpus-baseline/: 01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-ir/: 02-01-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VALIDATION.md
.planning/phases/03-adapters/: 03-01-PLAN.md  03-02-SUMMARY.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-metrics/: 04-02-SUMMARY.md  04-03-SUMMARY.md  (+5 more)
.planning/research/: SUMMARY.md
docs/: phase5_batch_runbook.md
src/eval_corpus/: __init__.py  adapter_runner.py  chunk_io.py  chunker.py  cli.py  config.py  ir_models.py  manifest.py  metrics_io.py  scan.py  stats.py
tests/: __init__.py  conftest.py  test_adapters_contract.py  test_adapters_glm.py  test_adapters_mineru.py  test_adapters_paddle.py  test_adapters_postprocess.py  test_batch_runner.py  test_chunker_cli.py  test_chunker_core.py  test_config.py  test_manifest.py  test_metrics_aggregate.py  test_metrics_cli.py  test_metrics_core.py  test_metrics_ir_tables.py  test_metrics_semantic.py  test_postprocess_html.py  test_reporting_cli.py  test_reporting_detail.py  test_reporting_metadata.py  test_reporting_summary.py  test_scan.py  test_stats.py  test_synthetic_data.py
(+61 files in other folders)
